force-app/main/default/objects/sugati__Holiday_Suggestions__c/sugati__Holiday_Suggestions__c.object-meta.xml
<CustomObject>
    <label>Holiday Suggestion</label>
    <nameField>
        <displayFormat>HS-{0000000000}</displayFormat>
        <label>Holiday Suggestions ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holiday Suggestions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>