force-app/main/default/objects/sugati__Holiday_Suggestions__c/fields/sugati__HS_Base_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__HS_Base_Cost__c</fullName>
    <label>Base Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>