force-app/main/default/objects/sugati__Holiday_Suggestions__c/fields/sugati__HS_Continent__c.field-meta.xml
<CustomField>
    <fullName>sugati__HS_Continent__c</fullName>
    <formula>sugati__HS_Country__r.sugati__C_Continent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HS_Continent</label>
    <type>Text</type>
</CustomField>