force-app/main/default/objects/sugati__Holiday_Suggestions__c/fields/sugati__HS_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>sugati__HS_Date_Time__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>