force-app/main/default/objects/sugati__Holiday_Suggestions__c/fields/sugati__HS_Errata_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__HS_Errata_Text__c</fullName>
    <label>Errata Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>