force-app/main/default/objects/sugati__Holiday_Suggestions__c/fields/sugati__HS_Holiday_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__HS_Holiday_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holiday Type</label>
    <referenceTo>sugati__Holiday_Type__c</referenceTo>
    <relationshipLabel>Holiday Suggestions</relationshipLabel>
    <relationshipName>Holiday_Suggestions</relationshipName>
    <type>Lookup</type>
</CustomField>