force-app/main/default/objects/sugati__Holiday_Suggestions__c/fields/sugati__HS_Interest__c.field-meta.xml
<CustomField>
    <fullName>sugati__HS_Interest__c</fullName>
    <label>Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>