force-app/main/default/objects/sugati__Holiday_Suggestions__c/fields/sugati__HS_Message__c.field-meta.xml
<CustomField>
    <fullName>sugati__HS_Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>