force-app/main/default/objects/sugati__Holiday_Suggestions__c/fields/sugati__HS_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__HS_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Holiday Suggestions</relationshipLabel>
    <relationshipName>Holiday_Suggestions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>