force-app/main/default/objects/sugati__Holiday_Suggestions__c/fields/sugati__HS_Order__c.field-meta.xml
<CustomField>
    <fullName>sugati__HS_Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>