force-app/main/default/objects/sugati__Holiday_Suggestions__c/fields/sugati__HS_Suggestion_Image__c.field-meta.xml
<CustomField>
    <fullName>sugati__HS_Suggestion_Image__c</fullName>
    <label>Suggestion Image</label>
    <length>20</length>
    <type>Text</type>
</CustomField>