force-app/main/default/objects/sugati__Holiday_Suggestions__c/fields/sugati__HS_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__HS_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Holiday Suggestions</relationshipLabel>
    <relationshipName>Holiday_Suggestions</relationshipName>
    <type>Lookup</type>
</CustomField>