force-app/main/default/objects/sugati__Holiday_Suggestions__c/fields/sugati__HS_What_to_do__c.field-meta.xml
<CustomField>
    <fullName>sugati__HS_What_to_do__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>What to do</label>
    <referenceTo>sugati__Activity__c</referenceTo>
    <relationshipLabel>Holiday Suggestions</relationshipLabel>
    <relationshipName>Holiday_Suggestions</relationshipName>
    <type>Lookup</type>
</CustomField>