force-app/main/default/objects/sugati__Holiday_Suggestions__c/fields/sugati__HS_Where_to_go__c.field-meta.xml
<CustomField>
    <fullName>sugati__HS_Where_to_go__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Where to go</label>
    <referenceTo>sugati__Where_to_go__c</referenceTo>
    <relationshipLabel>Holiday Suggestions</relationshipLabel>
    <relationshipName>Holiday_Suggestions</relationshipName>
    <type>Lookup</type>
</CustomField>